footer align bug fixed

--- a/css/main.css
+++ b/css/main.css
@@ -86,7 +86,7 @@ body{
     margin-top: .9375rem;
 }
 
-.container-fluid > p, .container-fluid > h5,
+.container-fluid .text, .container-fluid > h5,
 .container-fluid > ul > li{
     margin-left: 1.25rem;
     text-align: left;
